# wingshot

./: Cargo.toml  README.md
.github/workflows/: ci.yml  dependabot-validate.yml  release.yml
src/: main.rs  rendering.rs  runtime_data.rs  types.rs
src/sctk_impls/: compositor_handler.rs  keyboard_handler.rs  layer_shell_handler.rs  seat_handler.rs
src/window/: hyprland.rs
