[package]
name = "wingshot"
authors = ["Kirottu", "WingsZeng"]
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smithay-client-toolkit = "0.19.2"
wayland-backend = { version = "0.3.8", features = ["client_system"] }
wayland-client = { version = "0.31.8" }
image = { version = "0.25.5", default-features = false, features = ["pnm", "ff", "jpeg", "png", "webp"] }
ron = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
fontconfig = "0.9.0"
wl-clipboard-rs = "0.9.1"
nix = { version = "0.29.0", default-features = false, features = ["process"] }
clap = { version = "4.5.27", features = ["derive"] }
chrono = "0.4.39"
env_logger = { version = "0.11.6", default-features = false, features = ["auto-color"] }
log = "0.4.25"
wgpu = "24.0.1"
raw-window-handle = "0.6.2"
pollster = "0.4.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
wgpu_text = "0.9.2"
regex = "1.11.1"
hyprland = "0.4.0-beta.2"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
anyhow = "1.0.95"
